--- a/app/src/main/res/layout/activity_new_course.xml
+++ b/app/src/main/res/layout/activity_new_course.xml
@@ -26,6 +26,7 @@
     <Button
         android:id="@+id/firstsubject"
         android:text="ICS 115"
+        android:textColor="#FFFFFF"
         android:textSize="30dp"
         android:layout_marginTop="30dp"
         android:layout_width="match_parent"
